# SkyrimSteamKeyboard

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
scripts/: UILIB_1.psc  UITextEntryMenu.psc  VirtualKeyboard.psc
src/Hooks/: CharGenManager.cpp  CharGenManager.h  EnchantManager.cpp  EnchantManager.h  MainThreadManager.cpp  MainThreadManager.h  SKSEManager.cpp  SKSEManager.h  SystemUtilityManager.cpp  SystemUtilityManager.h
src/PCH/: PCH.h
src/Papyrus/: EventDispatcher.cpp  EventDispatcher.h  VirtualKeyboard.cpp  VirtualKeyboard.h
src/RE/: Offset.h
src/SKSEPlugin/: SKSEPlugin.cpp
src/Steam/: CallbackManager.cpp  CallbackManager.h  Steam.cpp  Steam.h
